Changed loader to DVS

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
     <div id="root">
         <div class="page-loader">
-            <div class="loading" data-app-name="Device Verification Subsystem">
+            <div class="loading" data-app-name="DVS">
                 <div></div>
                 <div></div>
                 <div></div>
