Brokedown index into auth for symetry overall the systems and loader translation

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
-      <title>DVS</title>
-
+   <!--  <script>
+        var lang  = localStorage.getItem("i18nextLng");
+        console.log(lang)
+        document.title = "hahahaha";
+        console.log(document.title)
+        document.title = "hahahah"
+        </script> -->
+   
+        <title>DVS</title>
   </head>
 
   <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
-    <div id="root">
+      <div id="root">   
         <div class="page-loader">
             <div class="loading" data-app-name="DVS">
                 <div></div>
@@ -22,3 +29,5 @@
     </div>
   </body>
 </html>
+
+
