--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@ ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
       <div id="root">   
         <div class="page-loader">
-            <div class="loading" data-app-name="DVS">
+            <div class="loading" data-app-name="">
                 <div></div>
                 <div></div>
                 <div></div>
